--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   color: aliceblue;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding: 12px;
   /* gap: 1rem; */
 }
@@ -32,7 +32,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 1.2rem;
+
   gap: 2rem;
+}
+
+.margin-left {
+  margin-left: 5px;
 }
 .new-chat {
   outline: 1px solid #6e6e80;
@@ -42,15 +48,23 @@
   align-items: center;
   gap: 5px;
 }
-/* .other-features {
+.other-features {
   margin-top: auto;
-} */
+  border-top: 0.5px solid rgba(255, 255, 255, 0.204);
+}
+.other-features-sub {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 1rem;
+}
 .main-section {
   background-color: #353740;
   width: 80rem;
   color: aliceblue;
   /* margin: auto; */
   text-align: center;
+  padding: 10rem 10em 0 10rem;
 
   /* font-family: "Roboto", sans-serif; */
 }
@@ -71,6 +85,10 @@
 }
 h1 {
   text-align: center;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+
+  /* font-weight: 900; */
 }
 .capabilities {
   list-style: none;
@@ -81,4 +99,30 @@ h1 {
   line-height: 1.3;
   font-size: 15px;
   font-family: "Roboto";
+}
+input {
+  margin-top: 4rem;
+  width: 100%;
+  height: 3rem;
+}
+.search-bar {
+  /* outline: 1px solid red; */
+  /* background-color: #353740; */
+}
+input[type="search"] {
+  padding: 5px;
+  /* border: 2px solid red; */
+  border-radius: 4px;
+  background-color: #6e6e8060;
+  box-shadow: 0px 0px 3px 5px #353740;
+  border: none;
+  color: white;
+}
+.additional-text {
+  font-size: 12px;
+  margin-top: 10px;
+  color: rgba(255, 255, 255, 0.368);
+}
+.chatgpt-text {
+  text-decoration: underline;
 }
